{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 21,
  "lineage": "44a72851-0575-8b9b-aca8-9e88dcc3dd1a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bebd3d4452b0f238",
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:instance/i-04e630851abc63f85",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e630851abc63f85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c80141be896553e9"
              }
            ],
            "primary_network_interface_id": "eni-0c80141be896553e9",
            "private_dns": "ip-10-0-110-56.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.110.56",
            "public_ip": "18.183.138.158",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Owner": "mutsuki",
                  "project": "nat_2layer"
                },
                "tags_all": {
                  "Owner": "mutsuki",
                  "project": "nat_2layer"
                },
                "throughput": 0,
                "volume_id": "vol-095d6e74678e99c00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5fa697ebdd786d1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d48987e962f9c53"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "i-04e630851abc63f85",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.private_instance",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06816eff2d6f787c7",
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:elastic-ip/eipalloc-06816eff2d6f787c7",
            "domain": "vpc",
            "id": "eipalloc-06816eff2d6f787c7",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-182-186-164.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.186.164",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06816eff2d6f787c7",
            "association_id": "eipassoc-0f9991ee333c0dce9",
            "connectivity_type": "public",
            "id": "nat-0cc84cd56792d7220",
            "network_interface_id": "eni-041be9b9cb0933ba7",
            "private_ip": "10.0.10.223",
            "public_ip": "18.182.186.164",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eeef7f6457b9e6c3",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group/sg-09d48987e962f9c53",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09d48987e962f9c53",
            "ingress": [],
            "name": "terraform-20251030003350587500000001",
            "name_prefix": "terraform-",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sg-09d48987e962f9c53",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-04a1f48363fffea45",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a1f48363fffea45",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09d48987e962f9c53",
            "security_group_rule_id": "sgr-04a1f48363fffea45",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-04a1f48363fffea45",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-00fab9ed1d5489b93",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00fab9ed1d5489b93",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09d48987e962f9c53",
            "security_group_rule_id": "sgr-00fab9ed1d5489b93",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-00fab9ed1d5489b93",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-0acd5644759c32181",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0acd5644759c32181",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09d48987e962f9c53",
            "security_group_rule_id": "sgr-0acd5644759c32181",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-0acd5644759c32181",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-0f7d5d5b19e177b39",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f7d5d5b19e177b39",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-09d48987e962f9c53",
            "security_group_rule_id": "sgr-0f7d5d5b19e177b39",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-0f7d5d5b19e177b39",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:internet-gateway/igw-0b44b6fdd2c420623",
            "id": "igw-0b44b6fdd2c420623",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:route-table/rtb-0d8c9e505e6c24fc5",
            "id": "rtb-0d8c9e505e6c24fc5",
            "owner_id": "972583818888",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc84cd56792d7220",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "rtb-0d8c9e505e6c24fc5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:route-table/rtb-00c636023fb33662b",
            "id": "rtb-00c636023fb33662b",
            "owner_id": "972583818888",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b44b6fdd2c420623",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "rtb-00c636023fb33662b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faa96dc2313f08ee",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d8c9e505e6c24fc5",
            "subnet_id": "subnet-0a5fa697ebdd786d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a58595021ba1845",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d8c9e505e6c24fc5",
            "subnet_id": "subnet-0c668ed827b2c44f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0970089ef0d888659",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-00c636023fb33662b",
            "subnet_id": "subnet-0eeef7f6457b9e6c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ab2d28d52002f6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-00c636023fb33662b",
            "subnet_id": "subnet-0d2157cd6f8556429"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0a5fa697ebdd786d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5fa697ebdd786d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0a5fa697ebdd786d1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0c668ed827b2c44f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c668ed827b2c44f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0c668ed827b2c44f4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0eeef7f6457b9e6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeef7f6457b9e6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0eeef7f6457b9e6c3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0d2157cd6f8556429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2157cd6f8556429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            },
            "vpc_id": "vpc-08a3dba6386b51c25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0d2157cd6f8556429",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:vpc/vpc-08a3dba6386b51c25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f68218b7e347ae1e",
            "default_route_table_id": "rtb-03249b2d6326957b9",
            "default_security_group_id": "sg-0c36603dfb1995467",
            "dhcp_options_id": "dopt-03f2fcdacdff01321",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a3dba6386b51c25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03249b2d6326957b9",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "nat_2layer"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "vpc-08a3dba6386b51c25",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}